--- a/index.html
+++ b/index.html
@@ -36,28 +36,13 @@
 
       <a href="#inicio" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/logo.ico" alt="">
-        <h1 class="sitename">Kevin</h1><span>.</span>
+        <!-- <img src="assets/img/logo.ico" alt=""> -->
+        <h1 class="sitename">Kevin</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#inicio" class="active">Inicio</a></li>
-          <!-- <li class="dropdown"><a href="about.html"><span>About</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li> -->
           <li><a href="#acercademi">Acerca de mi</a></li>
           <li><a href="#portafolio">Portafolio</a></li>
           <li><a href="#contacto">Contacto</a></li>
@@ -76,87 +61,56 @@
 
   <main class="main">
 
-    <!-- carrusel Section -->
-    <section id="inicio" class="carrusel section dark-background">
-
-      <!-- Carrusel -->
-      <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
-
-        <!-- Las imágenes del carrusel -->
-        <div class="carousel-inner">
-
-          <div class="carousel-item active" style="background-image: url('assets/img/hero-carousel/hero-bg.jpg');">
-            <div class="carousel-caption d-none d-md-block text-center">
-              <h2>Web Development</h2>
-              <p>Since our establishment, we have been delivering high-quality and sustainable software solutions for
-                corporate purposes of worldwide businesses.</p>
-            </div>
-          </div><!-- End Carousel Item -->
-
-          <div class="carousel-item" style="background-image: url('assets/img/hero-carousel/services.jpg');">
-            <div class="carousel-caption d-none d-md-block text-center">
-              <h2>App Development</h2>
-              <p>We are a team of qualified software developers, aimed at creating unique and powerful tools for your
-                business & everyday life.</p>
-            </div>
-          </div><!-- End Carousel Item -->
-
-        </div><!-- End Carousel Inner -->
-
-        <!-- Controles del carrusel -->
-        <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-
-        <button class="carousel-control-next" type="button" data-bs-target="#hero-carousel" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div><!-- End Carrusel -->
-
-    </section><!-- /Hero Section -->
-
-
+    <section id="#inicio" class="inicio section">
+      <div class="content">
+        <h1>Hola, Soy Kevin <span style="color: #7636FB;">Desarrollador de Software</span></h1>
+        <p>Apasionado por la tecnología, el desarrollo de software y la resolución de problemas.</p>
+        <a href="#acercademi" class="btn_home">Conóceme más</a>
+      </div>
+      <div class="image-container">
+        <img src="assets/img/kevin.jpg" alt="Kevin Quintero">
+      </div>
+    </section>
 
     <!-- About Section -->
     <section id="acercademi" class="about section">
-
       <div class="container">
-
         <div class="row position-relative">
-
-          <div class="col-lg-7 about-img" data-aos="zoom-out" data-aos-delay="200"><img src="assets/img/about.jpg">
+          <div class="col-lg-7 about-img" data-aos="zoom-out" data-aos-delay="200">
+            <img src="assets/img/about.jpg" alt="Kevin Quintero">
           </div>
-
           <div class="col-lg-7" data-aos="fade-up" data-aos-delay="100">
-            <h2 class="inner-title">Consequatur eius et magnam</h2>
+            <h2 class="inner-title">Acerca de mí</h2>
             <div class="our-story">
-              <h4>Est 1988</h4>
-              <h3>Our Story</h3>
-              <p>Inventore aliquam beatae at et id alias. Ipsa dolores amet consequuntur minima quia maxime autem.
-                Quidem id sed ratione. Tenetur provident autem in reiciendis rerum at dolor. Aliquam consectetur
-                laudantium temporibus dicta minus dolor.</p>
+              <h4>Desarrollador de Software</h4>
+              <h3>Kevin Quintero</h3>
+              <p>
+                Soy un desarrollador de software con experiencia en el desarrollo de aplicaciones web. Apasionado por el
+                aprendizaje y la innovación, me destaco en la resolución de problemas y la implementación de soluciones
+                eficientes. Busco oportunidades que me permitan crecer tanto personal como profesionalmente, mientras
+                aplico mis conocimientos en tecnologías como React.js, PHP, Laravel y MySQL.
+              </p>
               <ul>
-                <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commo</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in</span></li>
-                <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>1 año de experiencia en desarrollo web.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Habilidades en API RESTful y bases de datos.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span>Capacidad de aprendizaje y trabajo en equipo.</span></li>
               </ul>
-              <p>Vitae autem velit excepturi fugit. Animi ad non. Eligendi et non nesciunt suscipit repellendus porro in
-                quo eveniet. Molestias in maxime doloremque.</p>
-
-              <div class="watch-video d-flex align-items-center position-relative">
+              <p>
+                Actualmente estudio Ingeniería de Sistemas en Uniremington y cuento con una tecnología en Análisis y
+                Desarrollo de Sistemas de Información del SENA. Mi enfoque está en crear soluciones tecnológicas que
+                optimicen procesos y mejoren la experiencia de los usuarios.
+              </p>
+              <!-- <div class="watch-video d-flex align-items-center position-relative">
                 <i class="bi bi-play-circle"></i>
-                <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox stretched-link">Watch Video</a>
-              </div>
+                <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox stretched-link">Ver más sobre
+                  mí</a>
+              </div> -->
             </div>
           </div>
-
         </div>
-
       </div>
+    </section>
 
-    </section><!-- /About Section -->
 
     <!-- Services Section -->
     <section id="portafolio" class="services section light-background">
@@ -427,7 +381,7 @@
     </section><!-- /Portfolio Section -->
   </main>
 
-  <footer id="footer" class="footer dark-background">
+  <footer id="footer" class="footer">
 
     <div class="container footer-top">
       <div class="row gy-4">
