--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <main class="main">
 
-    <section id="#inicio" class="inicio section">
+    <section id="inicio" class="inicio section">
       <div class="content">
         <h1>Hola, Soy Kevin <span style="color: #7636FB;">Desarrollador de Software</span></h1>
         <p>Apasionado por la tecnología, el desarrollo de software y la resolución de problemas.</p>
